fix: hotfix ban schema and documentation
