# src/Presentation/Http/Validations/Schemas/Ban/CreateBanSchema.ts
@@ -2,7 +2,7 @@
 import Joi, { Schema } from 'joi';
 
 export const CreateBanSchema: Schema = Joi.object().keys({
-    dateFrom: Joi.date().min('1-1-2000').iso().required(),
-    dateTo: Joi.date().greater(Joi.ref('dateFrom')).max('12-31-2049').iso().required(),
+    date: Joi.date().min('1-1-2000').iso().required(),
+    matches: Joi.number().integer().required(),
     player_id: Joi.number().integer().min(1).required(),
 });
